...
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/users_management_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">
...
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_menu"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:onClick="showMenu"
                            android:src="@drawable/ic_menu" />

...
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.Toolbar>

                <ListView
                    android:id="@+id/users_management_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>

            </LinearLayout>

            <LinearLayout
...
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone"/>


                <android.support.design.widget.BottomNavigationView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/users_management_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:visibility="gone"
                    app:itemIconTint="@android:color/white"
                    app:itemTextColor="@android:color/white"
...

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/navigation_header"
        app:itemBackground="@android:color/transparent"
...
