<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/modificar"
        android:icon="@drawable/ic_modify"
        android:title="Cambiar contraseña" />
    <item android:id="@+id/eliminar"
        android:icon="@drawable/ic_delete"
        android:title="Eliminar"/>
</menu>
